@@ -143,6 +143,40 @@ public class LightServiceTest extends FastJerseyTest {
                 .toString());
     }
 
+	@Test
+	public void testMatchInfoGet1 () {
+		// match-WPD_AAA.00001-p4-5
+        ClientResponse response = resource()
+			.path(getAPIVersion())
+			//.path("corpus/GOE/AGI.00200/p13576-13577/matchInfo")
+			.path("corpus/WPD/AAA.00001/p4-5/matchInfo")
+			.queryParam("foundry", "*")
+			.queryParam("spans", "false")
+			.get(ClientResponse.class);
+        assertEquals(ClientResponse.Status.OK.getStatusCode(),
+					 response.getStatus());
+        String ent = response.getEntity(String.class);
+        JsonNode node = JsonUtils.readTree(ent);
+        assertNotNull(node);
+        assertEquals("WPD/AAA/00001", node.at("/textSigle").asText());
+	};
+
+	@Test
+	public void testMatchInfoGet2 () {
+		// match-WPD_AAA.00001-p4-5
+        ClientResponse response = resource()
+			.path(getAPIVersion())
+			//.path("corpus/GOE/AGI.00200/p13576-13577/matchInfo")
+			.path("corpus/WPD/AAA.00001/p4-5/matchInfo")
+			.queryParam("foundry", "*")
+			.get(ClientResponse.class);
+        assertEquals(ClientResponse.Status.OK.getStatusCode(),
+					 response.getStatus());
+        String ent = response.getEntity(String.class);
+        JsonNode node = JsonUtils.readTree(ent);
+        assertNotNull(node);
+        assertEquals("WPD/AAA/00001", node.at("/textSigle").asText());
+	};
 
     @Test
     public void testCQParameter () {
